--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=PayStation
-server.port=8081
+server.port=1234
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
